--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
   </head>
 
   <body>
+  	<p class="notice">Register<%= notice %></p>
+    <p class="alert">Sign In<%= alert %></p>
     <%= yield %>
   </body>
 </html>
